# card_vault

./: .env  .env.dev  .env.exemple  .gitignore  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.preprod.yml  docker-compose.yml  http-client.env.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build-and-push.yml  ci.yaml  deploy.yaml
ai-service/: Dockerfile
backend/: .dockerignore  .flake8  Dockerfile  main.py  package.json  pyproject.toml  requirements.txt
backend/app/models/: __init__.py  card.py  collections.py  database.py  session.py  user.py
backend/app/resources/: licenses.json
backend/app/routers/: dashboard.py  dashboardController.py  scan.py  scan_controller.py  search.py  searchController.py  search_controller.py  stats.py  stats_controller.py  status.py  statusController.py  vault.py  vault_controller.py
backend/app/routers/auth/: delete_account.py  get_user.py  login.py  login_controller.py  logout.py  logout_controller.py  me.py  password.py  register.py  registerController.py
backend/app/schemas/: card.py  collection.py  user.py
backend/app/services/: magic_service.py  pokemon_service.py  session.py
backend/app/services/collections/: collection.py
backend/app/services/cookies/: session.py
backend/app/services/database/postgres/: postgres.py
backend/app/services/database/redis/: redis.py
backend/app/services/normalizers/: magic_normalizer.py  pokemon_normalizer.py
backend/app/services/standardized/magic/: magic_standardized.py
backend/app/services/standardized/pokemon/: pokemon_standardized.py
docs/: Stage 3.md  Stage_1.md  Stage_2.md  Stage_3.md  Stage_4.md  Stage_5.md  portfolio_stage_1.md
docs/Stage_1/: Brainstorming_and_Idea_evaluation.md
docs/stage_1/: 1-team.md  2-idea.md  3-mvp.md  4-mvp_detailed.md  5-smart.md  6-scope.md  7-risks.md  8-architecture.md
docs/stage_2/: portfolio_stage_2.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/.next/: BUILD_ID  build-manifest.json  trace  trace-build  (+4 more)
frontend_old/: package-lock.json
ml-model/: Dockerfile  pyproject.toml
ml-service/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
ml-service/scrapping/: main_scrap.py  push_to_hf.py  stream_to_hf.py
ml_service/: .flake8  Dockerfile  main.py  pyproject.toml  requirements.txt
ml_service/app/api/v1/: predict.py
ml_service/app/models/: model.py
ml_service/app/models/data_cache/: cards_metadata.npy
ml_service/app/scrapping/: magic_scrap.py  main_scrap.py  pokemon_scrap.py  stream_to_hf.py
proxy/: Dockerfile  default.conf  default.dev.conf  default.preprod.conf  proxy.conf
(+198 files in other folders)
