[project]
name = "card-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "datasets>=4.5.0",
    "faiss-gpu>=1.7.2",
    "fastapi>=0.128.0",
    "huggingface-hub>=0.36.0",
    "numpy<2.0",
    "pillow>=12.1.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "tensorflow[and-cuda]>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "uvicorn>=0.40.0",
]
