[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "tensorflow>=2.20.0",
    "uvicorn>=0.40.0",
]
