[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "flake8>=7.3.0",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.1.1,<2.2.0",
    "ruff>=0.15.21",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
    "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 79
